[package]
name = "pocket-relay"
version = "0.5.1"
description = "Pocket Relay Server"
readme = "README.md"
keywords = ["EA", "PocketRelay", "MassEffect"]
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/PocketRelay/Server"

# Glob to ensure resources is included 
include = ["src/**/*"]

[dependencies]
# Serde for serialization mostly in the HTTP server but also
# used elsewhere to do define custom serialization
serde = { version = "1", features = ["derive"] }
# Logging facade
log = { version = "0.4", features = ["serde"] }

# Blaze packet system 
blaze-pk = "1"
# Blaze SSLv3 async TCPStream implementation
blaze-ssl-async = "^0.3"

# Resource embedding using debug-embed to always resolve relative to the Cargo.toml file
rust-embed = { version = "6.4.2", features = ["debug-embed"] }

# Password hashing
argon2 = "0.5"

base64ct = { version = "1.5", features = ["alloc"] }
flate2 = { version = "1", features = ["zlib"], default-features = false }
ring = "0.16"


# Library for obtaining the local IP address of the device
local-ip-address = "0.5"

thiserror = "1"
validator = { version = "0.16", features = ["derive"] }

interlink = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
serde_json = "1.0.94"
hyper = "0.14.25"

[dependencies.sea-orm]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "with-chrono", "sqlx-sqlite"]

[dependencies.sea-orm-migration]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]

# Tokio async runtime
[dependencies.tokio]
version = "1"
features = [
    "fs",
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
]

# Axum web framework
[dependencies.axum]
version = "0.6.1"
default-features = false
features = ["http1", "json", "query", "tokio"]

# HTTP Client
[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["json", "rustls-tls"]

# Logging provider 
[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "file_appender"]

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "serde"]


[patch.crates-io]
local-ip-address = { git = "https://github.com/jacobtread/local-ip-address.git" }

[profile.release]
strip = true
lto = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Bininstall meta
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }{ archive-suffix }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/pocket-relay-windows.exe"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/pocket-relay-linux"
