[package]
name = "pocket-relay"
version = "0.6.2-beta"
description = "Pocket Relay Server"
readme = "README.md"
keywords = ["EA", "PocketRelay", "MassEffect"]
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]
repository = "https://github.com/PocketRelay/Server"

# Glob to ensure resources is included 
include = ["src/**/*"]

[features]
default = []
# Feature to enable logging of common large packet contents that are ignored for log size sake
large-packet-logging = []

[dependencies]
# Serde and Serde JSON for serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared backing library
pocket-relay-udp-tunnel = { version = "0" }

# Coalesced parser
me3-coalesced-parser = { version = "0.2.0" }

# Logging facade
log = { version = "0.4", features = ["serde"] }
log-panics = { version = "2", features = ["with-backtrace"] }

# SSLv3 async impl
blaze-ssl-async = "^0.4"

# Resource embedding
embeddy = "0.1"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

base64ct = { version = "1.5", features = ["alloc"] }
flate2 = { version = "1", features = ["zlib"], default-features = false }
ring = "0.17"

# Library for obtaining the local IP address of the device
local-ip-address = "0.5"

# Error handling and transforming
thiserror = "1"

# Email validation
email_address = "0.2.4"

# Codec utils for encoding and decoding packets
tokio-util = { version = "0.7", features = ["codec"] }

# Hyper for connection upgrades (TODO: Update to 1.0 once reqwest supports it)
hyper = "1.2.0"
hyper-util = { version = "0.1.3", features = ["tokio"] }
tower = "0.4"

bitflags = { version = "2.3.1", features = ["serde"] }
tdf = { version = "0.4" }
bytes = "1.4.0"

indoc = "2"
parking_lot = "0.12.1"

# Const safe HashMaps (Can be replaced with std HashMap after https://github.com/rust-lang/rust/issues/102575 is resolved)
hashbrown = { version = "0.14.3", default-features = false, features = [
    "allocator-api2",
    "inline-more",
] }

uuid = { version = "^1", features = ["v4", "serde", "fast-rng"] }
rand = "0.8"

# SeaORM 
[dependencies.sea-orm]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "with-chrono", "sqlx-sqlite"]

# SeaORM Migration 
[dependencies.sea-orm-migration]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]

# Futures util for stream and sink extensions
[dependencies.futures-util]
version = "0.3"
features = ["sink"]

# Tokio async runtime
[dependencies.tokio]
version = "1"
features = [
    "fs",
    "macros",
    "net",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
]

# Axum web framework (TODO: Update to 0.7 once once reqwest supports hyper 1.0)
[dependencies.axum]
version = "0.7.5"
default-features = false
features = ["http1", "json", "query", "tokio"]

# HTTP Client
[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["json", "rustls-tls"]

# Logging provider 
[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "file_appender"]

# Datetime
[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "serde"]

[dev-dependencies]
# Random numbers for seeding
rand = "0.8"

[profile.release]
strip = true
lto = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Bininstall meta
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }{ archive-suffix }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/pocket-relay-windows.exe"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/pocket-relay-linux"
