[package]
name = "pocket-relay-core"
description = "Core module for Pocket Relay which contains shared state as well as game logic"

version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
database-sqlite = ["database/sqlite"]
database-mysql = ["database/mysql"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization and packets
blaze-pk = { workspace = true }
blaze-ssl-async = { workspace = true }
serde = { workspace = true }

utils = { workspace = true }
database = { workspace = true }

# Logging
log = { workspace = true }

futures = "0.3.25"
