[package]
name = "pocket-relay-core"
description = "Core module for Pocket Relay which contains shared state as well as game logic"

version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
database-sqlite = ["database/sqlite"]
database-mysql = ["database/mysql"]

[dependencies]
tokio = { workspace = true }

blaze-pk = { workspace = true }
blaze-ssl-async = { workspace = true }
serde = { workspace = true }

utils = { workspace = true }
database = { workspace = true }

log = { workspace = true }

futures-util = "0.3"
