[package]
name = "pocket-relay-database"
description = "Module for isolating the database logic from the Pocket Relay servers"
version = "0.2.0"

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
mysql = ["sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]

[dependencies]
log = { workspace = true }
serde = { workspace = true }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "serde"]

[dependencies.sea-orm]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "with-chrono"]

[dependencies.sea-orm-migration]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls"]
