[package]
name = "pocket-relay-database"
description = "Module for isolating the database logic from the Pocket Relay servers"
version = "0.4.0"

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }

[dependencies.sea-orm]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "with-chrono", "sqlx-sqlite"]

[dependencies.sea-orm-migration]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
