[package]
name = "pocket-relay-tools"
description = "Tooling for working with, compiling, and converting files used by the Pocket Relay server"
version = "0.1.0"

repository = "https://github.com/PocketRelay/ServerRust"
edition = "2021"
license = "MIT"
authors = ["Jacobtread <jacobtread@gmail.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.13.1"
blaze-pk = "0.6.0-alpha-6"
flate2 = { version = "1.0.24", features = ["zlib"], default-features = false }