[package]
name = "utils"
version = "0.1.0"
edition = "2021"
description = "Utility modules and functions for Pocket Relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP Client
reqwest = { version = "0.11.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
blaze-pk = { version = "0.4.7", features = [] }

# Password hashing
rand_core = { version = "0.6", features = ["std"] }
argon2 = "0.4"
password-hash = "0.4.2"

# Randomization
rand = "0.8.5"

# Logging
log = "0.4.17"
log4rs = { version = "1.2.0", features = [ "gzip"] }
