[package]
name = "utils"
description = "Utility modules and functions for Pocket Relay"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP Client
reqwest = { version = "0.11.12", features = ["json"] }

# Serialization
serde = { workspace = true }
blaze-pk = { workspace = true }

# Password hashing
rand_core = { version = "0.6", features = ["std"] }
argon2 = { version = "0.4" }
password-hash = { version = "0.4.2" }

# Randomization
rand = { version = "0.8.5" }

# Logging
log = { workspace = true }
log4rs = { version = "1.2.0", features = ["gzip"] }

regex = { version = "1" }
