[package]
name = "pocket-relay-utils"
description = "Utility modules and functions for Pocket Relay"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
blaze-pk = { workspace = true }

# Password hashing
rand_core = { version = "0.6", features = ["std"] }
argon2 = { version = "0.4" }
password-hash = { version = "0.4.2" }

log = { workspace = true }

# HTTP Client
[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.regex]
version = "1"
default-features = false
features = ["std"]
