[package]
name = "http-server"

version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }
futures-util = { version = "0.3.25" }

# HTTP Server
actix-web = "4"

# Serialization and packets
serde = { workspace = true }

core = { workspace = true }
utils = { workspace = true }
database = { workspace = true }

# Logging
log = { workspace = true }

# Resource / HTTP embedding
rust-embed = { workspace = true }
mime_guess = "2.0.4"
