[package]
name = "pocket-relay-http-server"
description = "Pocket Relay HTTP server used to serve content used by Mass Effect"
version = "0.1.0"
include = [ "src/**/*" ]

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }

# HTTP Server
actix-web = "4"
actix-cors = "0.6.4"

# Serialization and packets
serde = { workspace = true }

core = { workspace = true }
utils = { workspace = true }
database = { workspace = true }

# Logging
log = { workspace = true }

# Resource / HTTP embedding
rust-embed = { workspace = true }
mime_guess = "2.0.4"
