[package]
name = "pocket-relay-http-server"
description = "Pocket Relay HTTP server used to serve content used by Mass Effect"
version = "0.1.0"
# Glob include to ensure resources are included
include = [ "src/**/*" ]

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }

actix-web = "4"
actix-cors = "0.6.4"

serde = { workspace = true }

core = { workspace = true }
utils = { workspace = true }
database = { workspace = true }
log = { workspace = true }

rust-embed = { workspace = true }
mime_guess = "2.0.4"
