[package]
name = "pocket-relay-main-server"
description = "Pocket Relays Main server which is responsible for most of the client server logic"
version = "0.1.0"

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization and packets
blaze-pk = { workspace = true }
serde = { workspace = true }
blaze-ssl-async = { workspace = true }

core = { workspace = true }
utils = { workspace = true }
database = { workspace = true }

# Logging
log = { workspace = true }

rust-embed = { workspace = true }
