[package]
name = "pocket-relay-main-server"
description = "Pocket Relays Main server which is responsible for most of the client server logic"
version = "0.1.0"
# Glob include to ensure resources are included
include = [ "src/**/*" ]

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
blaze-pk = { workspace = true }
serde = { workspace = true }
blaze-ssl-async = { workspace = true }
core = { workspace = true }
utils = { workspace = true }
database = { workspace = true }
log = { workspace = true }
rust-embed = { workspace = true }
