[package]
name = "pocket-relay-redirector-server"
description = "Pocket Relay Redirector server used to provided clients the address of the main server"
version = "1.0.0"

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization and packets
blaze-pk = { workspace = true }
blaze-ssl-async = { workspace = true }

core = { workspace = true }
utils = { workspace = true }

# Logging
log = { workspace = true }