[package]
name = "pocket-relay-redirector-server"
description = "Pocket Relay Redirector server used to provided clients the address of the main server"
version = "1.0.0"

repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
blaze-pk = { workspace = true }
blaze-ssl-async = { workspace = true }
core = { workspace = true }
utils = { workspace = true }
log = { workspace = true }